[project]
name = "samaydocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[python]>=9.6.23",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "samay",
]

[tool.uv.workspace]
members = [
    "Samay",
]

[tool.uv.sources]
samay = { workspace = true }
